refactor: 단어 게임 단어 개수 100개 반환하도록 수정